<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="refreshstatus">Refresh</string>
	<string name="password">Password</string>
	<string name="username">Username</string>
	<string name="port">Port</string>
	<string name="host">Host</string>
	<string name="settings">Settings</string>
	<string name="imapNamespace">IMAP user namespace (may be empty)</string>
	<string name="reset">Reset</string>
	<string name="title">Kolab Client for Android</string>
	<string name="app_name">Kolab Client for Android</string>
	<string name="sync">Sync All</string>
	<string name="invalidNumberFormat">Invalid number format</string>
	<string name="ok">OK</string>
	<string name="usessl">Use SSL</string>
	<string name="startsync">Start syncing</string>
	<string name="syncfinished">Sync finished</string>
	<string name="syncisrunning">Sync is already running</string>
	<string name="connect_server">Connecting to IMAP server ...</string>
	<string name="fetching_messages">Fetching IMAP headers ...</string>
	<string name="processing_message_format">Processing message %1$d of %2$d.</string>
	<string name="processing_item_format">Processing local item %1$d of %2$d.</string>
	<string name="sync_error_format">Error while synchronizing: %1$s</string>
	<string name="foldercontact">Contacts folder</string>
	<string name="foldercalendar">Calendar folder</string>
	<string name="sync_conflict">There was an edit conflict.</string>
	<string name="reset_error_format">Error while resetting: %1$s</string>
	<string name="resetisrunning">Reset is already running</string>
	<string name="delete_message_format">Deleting item %1$d.</string>
	<string name="resetting_start">Reseting local items.</string>
	<string name="reseting_finished">Reseting local items finished.</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="really_reset">Do you really want do delete all your Calendar,
		Contact and Task items?</string>
	<string name="workerisrunning">A worker is running</string>
	<string name="stopsync">Stop sync</string>
	<string name="clearlog">Clear log</string>
	<string name="syncaborted">Sync aborted</string>
	<string name="createRemoteHash">Create Remote Hash (opt.)</string>
	<string name="resetSoft">Reset Soft</string>
	<string name="really_reset_soft">Do you really want to delete all KOLABdroid data?
	</string>
	<string name="resetting_soft_start">Resetting KolabDroid DB</string>
	<string name="resetting_soft_finished">KolabDroid DB resetted.</string>
	<string name="mergeContactsByName">Merge Contacts by Name (deactivated)</string>
	<string name="targetAccount">Target Account</string>
	<string name="syncCalendar">Sync Calendar only</string>
	<string name="checkSettings">Check Settings</string>
	<string name="settingsSave">Save settings</string>
	<string name="settingsReset">Reset settings</string>
	<string name="checkSettingsProgressDialogTitle">Please wait...</string>
	<string name="checkSettingsProgressDialogMessage">Checking settings...</string>
	<string name="checkSettingsTestFailedInvalidCertificateTitle">Invalid or unknown certificate</string>
	<string name="checkSettingsTestFailedInvalidCertificateBtnAccept">Accept</string>
	<string name="checkSettingsTestFailedInvalidCertificateBtnReject">Reject</string>
	<string name="btnTestSettings">Test IMAP settings and update folder lists</string>
	<string name="settingsHeadlineIMAP">IMAP Settings</string>
	<string name="settingsHeadlineCalendar">Calendar Settings</string>
	<string name="settingsHeadlineContacts">Contact Settings</string>
	<string name="checkSettingsTestFailedInvalidCertificateMessage">Cannot safely connect to server.\n</string>
	<string name="checkSettingsTestFailedInvalidCertificateDefaultErrorMsg">Unknown error</string>
	<string name="checkSettingsTestFailedConnectExceptionTitle">Connection failed</string>
	<string name="checkSettingsTestFailedConnectException">Unable to connect to host:\n%1$s".</string>
	<string name="checkSettingsTestFailedUnknownHostExceptionTitle">Connection failed</string>
	<string name="checkSettingsTestFailedUnknownHostException">Hostname is unknown or cannot be resolved:\n%1$s
	</string>
	<string name="checkSettingsTestFailedAuthenticationFailedExceptionTitle">Authentication error</string>
	<string name="checkSettingsTestFailedAuthenticationFailedException">Given username or password are not correct.
	</string>
	<string name="checkSettingsTestFailedFolderNotFoundExceptionTitle">Folder not found</string>
	<string name="checkSettingsTestFailedFolderNotFoundException">The given IMAP namespace seems to be wrong.
	</string>
	<string name="checkSettingsTestFailedUnknownExceptionTitle">Error</string>
	<string name="checkSettingsTestFailedUnknownException">An error occurred during connection to host\n%1$s
	</string>
	<string name="checkSettingsTestFailedKeystoreErrorTitle">Certificate error</string>
	<string name="checkSettingsTestFailedKeystoreError">Adding certificate chain to keystore failed.
	</string>
	<string name="checkSettingsTestSuccessfulTitle">Success</string>
	<string name="checkSettingsTestSuccessful">IMAP test connection has been successfully
		established.</string>
	<string name="checkSettingsMsgDialogButton">Ok</string>
	<string name="checkSettingsCertificateChainSavedTitle">SSL Certificate</string>
	<string name="checkSettingsCertificateChainSaved">Certificate chain has been saved to local keystore.
	</string>
	<string name="checkSettingsCertificateChainDeclinedTitle">SSL Certificate</string>
	<string name="checkSettingsCertificateChainDeclined">Certificate chain has been declined. Encrypted IMAP
		connection will not be possible.</string>
	<string name="fetching_local_items">Fetching local items</string>

<string name="SYNC_ACCOUNT_NAME">KolabDroid SyncAccount</string>
	<string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
	<string name="crash_notif_title">KolabDroid has crashed...</string>
	<string name="crash_notif_text">Please click here to help fix the issue.</string>

	<string name="crash_dialog_title">KolabDroid has crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the
		application to stop. Please help us fix this by sending us error data,
		all you have to do is click \'OK\'.</string>
	<string name="crash_dialog_comment_prompt">You might add your comments about the problem
		below:</string>
	<string name="crash_dialog_ok_toast">Thank you !</string>
<string name="editor_save_success">Contact saved successfully</string>
<string name="ResetCalendar">Reset Calendar</string>
<string name="ResetContacts">Reset Contacts</string>
<string name="ResetCalendarSoft">Reset Calendar Soft</string>
<string name="ResetContactsSoft">Reset Contacts Soft</string>
<string name="really_reset_calendar">Do you really want do delete all your Kolab Calendar items?</string>
<string name="really_reset_contacts">Do you really want do delete all your Kolab Contact items?</string>
<string name="really_reset_contacts_soft">Do you really want to delete KolabDroid contact SYNC info?</string>
<string name="really_reset_calendar_soft">Do you really want to delete KolabDroid calendar SYNC info?</string>
<string name="settingsHeadlineMisc">Misc</string>
<string name="syncinterval">Min. sync interval</string>
<string name="diag_dump">Diag. Dump</string>
<string name="version_format">Version: %s</string>
<string name="diagLog">Diagnostic Log</string>
</resources>
